深度学习案例-手写数字识别

--- a/jupyter/参数管理.ipynb
+++ b/jupyter/参数管理.ipynb
@@ -9,7 +9,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "tensor([[0.8180, 0.2632, 0.7067, 0.0468],\n        [0.1850, 0.9105, 0.1426, 0.4926]])"
+      "text/plain": "tensor([[0.5022, 0.9179, 0.9019, 0.5201],\n        [0.0594, 0.0461, 0.4451, 0.2992]])"
      },
      "execution_count": 1,
      "metadata": {},
@@ -31,7 +31,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "tensor([[0.1217],\n        [0.0617]], grad_fn=<AddmmBackward0>)"
+      "text/plain": "tensor([[-0.0587],\n        [ 0.0592]], grad_fn=<AddmmBackward0>)"
      },
      "execution_count": 2,
      "metadata": {},
@@ -40,6 +40,29 @@
    ],
    "source": [
     "net(X)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "Sequential(\n  (0): Linear(in_features=4, out_features=8, bias=True)\n  (1): ReLU()\n  (2): Linear(in_features=8, out_features=1, bias=True)\n)"
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "net"
    ],
    "metadata": {
     "collapsed": false,
@@ -76,7 +99,6 @@
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
-    "\n",
     "\n",
     "# 定义一个简单的线性层\n",
     "class LinearLayer(nn.Module):\n",
